@@ -17,6 +17,7 @@ remove = Test::More
 [Prereqs]
 Acme::Alien::DontPanic                         = 2.6500
 Acme::Alien::DontPanic2                        = 2.6500
+Acme::Color::Rust                              = 0.03
 Acme::Ford::Prefect                            = 2.6500
 Acme::Ford::Prefect2                           = 2.6500
 Acme::Ford::Prefect::FFI                       = 2.6500
@@ -25,38 +26,40 @@ Alien                                          = 0.96
 Alien::Alien                                   = 0.02
 Alien::autoconf                                = 0.18
 Alien::automake                                = 0.18
-Alien::Autotools                               = 1.07
-Alien::Base::ModuleBuild                       = 1.15
+Alien::Autotools                               = 1.08
+Alien::Base::ModuleBuild                       = 1.17
 Alien::bison                                   = 0.22
-Alien::Build                                   = 2.68
+Alien::Build                                   = 2.71
 Alien::Build::Git                              = 0.10
 Alien::Build::MB                               = 0.09
 Alien::Build::Plugin::Decode::SourceForge      = 0.02
-Alien::Build::Plugin::Download::GitHub         = 0.07
+Alien::Build::Plugin::Download::GitHub         = 0.09
+Alien::Build::Plugin::Download::GitLab         = 0.01
 Alien::Build::Plugin::Extract::Libarchive      = 0.02
 Alien::Build::Plugin::Fetch::Cache             = 0.05
 Alien::Build::Plugin::Probe::GnuWin32          = 0.59
 Alien::Build::Plugin::Probe::Override          = 0.03
-Alien::Build::Plugin::Fetch::HostAllowList     = 0.01
-Alien::Build::Plugin::Fetch::HostBlockList     = 0.01
+Alien::Build::Plugin::Fetch::HostAllowList     = 0.02
+Alien::Build::Plugin::Fetch::HostBlockList     = 0.02
 Alien::Build::Plugin::Fetch::Prompt            = 0.61
 Alien::Build::Plugin::Fetch::Rewrite           = 0.03
-Alien::castxml                                 = 0.01
+Alien::castxml                                 = 0.02
 Alien::chromaprint                             = 0.02
 Alien::CMake                                   = 0.12
 Alien::cmake3                                  = 0.08
-Alien::curl                                    = 0.09
+Alien::curl                                    = 0.10
 Alien::Editline                                = 0.10
-Alien::Expat                                   = 0.02
+Alien::Expat                                   = 0.04
 Alien::FFI                                     = 0.25
 Alien::flex                                    = 0.15
-Alien::gmake                                   = 0.21
+Alien::ghostunnel                              = 0.01
+Alien::gmake                                   = 0.24
 Alien::GMP                                     = 1.16
 Alien::GSL                                     = 1.07
 Alien::gzip                                    = 0.06
 Alien::help2man                                = 0.01
 Alien::Hunspell                                = 0.17
-Alien::Libarchive3                             = 0.32
+Alien::Libarchive3                             = 0.33
 Alien::Libbz2                                  = 0.24
 Alien::libnewrelic                             = 0.08
 Alien::libpcre                                 = 0.02
@@ -65,13 +68,13 @@ Alien::LibreSSL                                = 0.06
 Alien::libuuid                                 = 0.05
 Alien::libtool                                 = 0.15
 Alien::LibYAML                                 = 2.05
-Alien::Libxml2                                 = 0.17
-Alien::LZO                                     = 0.02
+Alien::Libxml2                                 = 0.19
+Alien::LZO                                     = 0.03
 Alien::m4                                      = 0.21
-Alien::MSYS                                    = 0.15
+Alien::MSYS                                    = 0.17
 Alien::nasm                                    = 0.23
 Alien::Nettle                                  = 0.05
-Alien::OpenSSL                                 = 0.14
+Alien::OpenSSL                                 = 0.15
 Alien::patch                                   = 0.15
 Alien::pkgconf                                 = 0.18
 Alien::Role::Alt                               = 0.05
@@ -83,12 +86,12 @@ Alien::xz                                      = 0.08
 ;Alt::Alien::FFI::System                       = 0.21
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
 ;Alt::FFI::Raw::FFI                            = 0.04
-AnyEvent::Finger                               = 0.12
+AnyEvent::Finger                               = 0.14
 AnyEvent::FTP                                  = 0.19
 AnyEvent::Ident                                = 0.08
 AnyEvent::Open3::Simple                        = 0.87
 AnyEvent::WebSocket::Client                    = 0.54
-App::af                                        = 0.17
+App::af                                        = 0.18
 App::cpangitify                                = 0.20
 App::plasm                                     = 0.03
 App::Prove::Plugin::TermTable                  = 0.03
@@ -98,9 +101,9 @@ App::RegexFileUtils                            = 0.08
 App::spaceless                                 = 0.08
 App::supertouch                                = 0.02
 App::tarweb                                    = 0.01
-App::whichdll                                  = 0.03
+App::whichdll                                  = 0.04
 Archive::Ar::Libarchive                        = 2.09
-Archive::Libarchive                            = 0.05
+Archive::Libarchive                            = 0.08
 Archive::Libarchive::Extract                   = 0.03
 Archive::Libarchive::Peek                      = 0.04
 Archive::Libarchive::Unwrap                    = 0.01
@@ -111,14 +114,14 @@ Const::Introspect::C                           = 0.01
 Devel::ebug                                    = 0.64
 Devel::ebug::HTTP                              = 0.36
 Dist::Zilla::App::Command::aliendeps           = 0.03
-Dist::Zilla::MintingProfile::AlienBuild        = 0.06
+Dist::Zilla::MintingProfile::AlienBuild        = 0.07
 Dist::Zilla::MintingProfile::FFI               = 0.03
 Dist::Zilla::Plugin::AlienBuild                = 0.32
 Dist::Zilla::Plugin::Alt                       = 0.08
 Dist::Zilla::Plugin::ArchiveTar                = 0.03
 Dist::Zilla::Plugin::CommentOut                = 0.05
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
-Dist::Zilla::Plugin::FFI                       = 1.05
+Dist::Zilla::Plugin::FFI                       = 1.07
 Dist::Zilla::Plugin::InsertExample             = 0.15
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::Libarchive                = 0.03
@@ -130,10 +133,11 @@ Dist::Zilla::PluginBundle::Author::Plicease    = 2.72
 Env::ShellWords                                = 0.02
 Eval::LineNumbers                              = 0.35
 Exception::Class::DBI                          = 1.04
+Exception::FFI::ErrorCode                      = 0.03
 FFI                                            = 1.15
 FFI::C                                         = 0.12
 FFI::C::Stat                                   = 0.02
-FFI::CheckLib                                  = 0.28
+FFI::CheckLib                                  = 0.31
 FFI::ExtractSymbols                            = 0.07
 FFI::Platypus                                  = 2.01
 FFI::Platypus::Declare                         = 1.34
@@ -172,7 +176,7 @@ Photography::DX                                = 0.02
 Photography::EV                                = 0.07
 PkgConfig                                      = 0.25026
 PkgConfig::LibPkgConf                          = 0.11
-Plack::App::GitHubPages::Faux                  = 0.02
+Plack::App::GitHubPages::Faux                  = 0.03
 Plack::App::Libarchive                         = 0.02
 Pod::Simple::Words                             = 0.07
 PPIx::DocumentName                             = 1.01
@@ -193,6 +197,7 @@ Test2::Tools::FFI                              = 0.06
 Test2::Tools::HTTP                             = 0.11
 Test2::Tools::HTTP::UA::Mojo                   = 0.05
 Test2::Tools::JSON::Pointer                    = 0.02
+Test2::Tools::MemoryCycle                      = 0.01
 Test2::Tools::PerlCritic                       = 0.04
 Test2::Tools::Process                          = 0.06
 Test2::Tools::URL                              = 0.06
